--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <h1>SKYDDA</h1>
             <h2>Jordan LAT</h2>
             <p>Un Tank tanky, pour mieux protéger ces camarades <strong>#winkwink</strong><br>Equipement: Bouclier large, Bouclépée</p>
+            <img src="img/mescompetences.svg">
         </div>
         
     </main>
