--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="hero-contenu">
             <h1>SKYDDA</h1>
             <h2>Jordan LAT</h2>
-            <p>Un Tank tanky, pour mieux protéger ses camarades.<strong>#winkwink</strong> <br>Anciennement soldat dans l'armée régulière, il est mortellement blesser sur le champ de bataille.<br>Sauver par des gens formidable, il retrouve le goût de la vie et oeuvre désormais pour défendre les opprimés.<br><br> <strong>Equipement</strong>: Bouclier large, Bouclépée<br><strong>Valeur</strong>:Loyale,Ouvert d'esprit,Esprit d'équipe</p>
+            <p>Un Tank tanky, pour mieux protéger ses camarades.<strong>#winkwink</strong> <br>Anciennement soldat dans l'armée régulière, il est mortellement blessé sur le champ de bataille.<br>Sauvé par des gens formidable, il retrouve le goût de la vie et oeuvre désormais pour défendre les opprimés.<br><br> <strong>Equipement</strong>: Bouclier large, Bouclépée<br><strong>Valeur</strong>:Loyale,Ouvert d'esprit,Esprit d'équipe</p>
             <img src="img/mescompetences.svg">
         </div>
         
